--- a/connectedDevice.html
+++ b/connectedDevice.html
@@ -68,36 +68,51 @@
                     <h3>Hardware progress</h3>
                 </section>
                 <section>
-                    <h4>1985 - the world most powerful computer</h4>
-                    <img src="images/cray2.jpg">
-                    <div class="pbverysmall">Source: <a href="https://images.nasa.gov/details-ARC-1986-AC86-0746-2"
-                            title="NASA" target="_blank">NASA</a></div>
+                    <h4>1982 - Cray X-MP</h4>
+                    <img src="images/CRAY-X-MP-1-1.jpg" height="500">
+                    <div class="pbverysmall">Source: <a href="https://www.hpe.com/us/en/compute/hpc/cray.html"
+                            title="HPE" target="_blank">HPE</a></div>
                 </section>
                 <section>
-                    <p>Cray-2</p>
                     <ul>
-                        <li>1,9 GFLOPS (giga floating-point operations per second)</li>
-                        <li>38 millions US$ (in 2020)</li>
+                        <li>World most powerful computer</li>
+                        <li>0.94 GFLOPS (giga floating-point operations per second)</li>
+                        <li>Price: around US$15 million (would be US$45 million in 2022)</li>
                     </ul>
+                    <div class="pbverysmall">Sources : 
+                        <a href="https://www.hpe.com/us/en/compute/hpc/cray.html"
+                            title="HPE" target="_blank">HPE</a>
+                        <a href="https://www2.cisl.ucar.edu/ncar-supercomputing-history/cx"
+                            title="NCAR" target="_blank">NCAR</a>
+                    </div>                    
                 </section>
                 <section>
-                    <h4>2020 - iPhone 11</h4>
-                    <img src="images/iphone11.png">
-                    <div class="pbverysmall">Source: <a href="https://www.apple.com/fr/iphone-11/" title="Apple"
+                    <h4>2022 - iPhone 14</h4>
+                    <img src="images/iphone-14-model-unselect-gallery-2-202303_GEO_US.png" height="500">
+                    <div class="pbverysmall">Source: <a href="https://www.apple.com/iphone-14/" title="Apple"
                             target="_blank">Apple</a></div>
                 </section>
                 <section>
                     <ul>
-                        <li>155 GFLOPS</li>
-                        <li>850 US$</li>
+                        <li>1.37 TFLOPS (GPU)</li>
+                        <li>Price: US$800</li>
                     </ul>
+                    <div class="pbverysmall">Sources : 
+                        <a href="https://en.wikipedia.org/wiki/Apple_silicon"
+                            title="Wikipedia" target="_blank">Wikipedia</a>
+                        <a href="https://www.apple.com/shop/buy-iphone/iphone-14"
+                            title="Apple" target="_blank">Apple</a>
+                    </div>
                 </section>
                 <section>
-                    <p>In 35 years: </p>
+                    <p>In 40 years:</p>
                     <ul>
-                        <li>Processing power multiplied by around 70</li>
-                        <li>Cost divided by around 38000</li>
+                        <li>Processing power multiplied by around 1,400</li>
+                        <li>Cost divided by around 56,250</li>
                     </ul>
+                    <div class="pbverysmall">
+                    (Beware: comparing processing power in a really correct way is more complex than simply looking at the two FLOPS values. But, anyway, this gives an idea.)
+                    </div>
                 </section>
                 <section>
                     <p class="pbcenter">What do the years to come have in store?!</p>
