--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 						</tr>
 					</thead>
 					<tbody>
+					    <tr>
+					        <td>07-Sep-2023</td>
+					        <td>Cray X-MP vs iPhone 14</td>
+					    </tr>
 						<tr>
 							<td>02-Jan-2023</td>
 							<td>Floating-point arithmetic - Sigfox update</td>
-						</tr>
-						<tr>
-							<td>12-Feb-2022</td>
-							<td>Navigation hint</td>
 						</tr>
 						<tr>
 							<td>18-Dec-2021</td>
@@ -89,7 +89,7 @@
 						</tr>
 						<tr>
 							<td>19-Jan-2021</td>
-							<td>Version 1.0</td>
+							<td>Creation</td>
 						</tr>
 					</tbody>
 				</table>
