Update Apollo Guidance Computer example

--- a/connectedDevice.html
+++ b/connectedDevice.html
@@ -123,7 +123,7 @@
                     <h3>Memory, processing power and applications</h3>
                 </section>
                 <section>
-                    <h4>1969 - the computer that allowed to land on the Moon</h4>
+                    <h4>1969 - The computer that made it possible to land on the Moon</h4>
                     <img src="images/agc_dsky.jpg">
                     <div class="pbverysmall">Source: <a href="http://klabs.org/history/history_docs/mit_docs/agc.htm"
                             title="klabs.org" target="_blank">klabs.org</a></div>
@@ -160,8 +160,11 @@
                         <li>Clock: up to 64 MHz</li>
                         <li>Power consumption: 30 mW (microcontroller alone)</li>
                         <li>Power consumption in sleep mode: 0,1 &mu;W</li>
-                        <li>Price: 1.96 €</li>
+                        <li>Price: around US$3.00</li>
                     </ul>
+                    <div class="pbverysmall">
+                    Note: this microcontroller is not radiation hardened, does not provide all required I/O, does not provide all required reliability mechanisms, etc.
+                    </div>
                     <div class="pbverysmall">Source : <a href="https://www.microchip.com/wwwproducts/en/PIC18F47K42"
                             title="Microchip" target="_blank">Microchip</a></div>
                 </section>
