Improve computer reminders section

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 					</thead>
 					<tbody>
 					    <tr>
-					        <td>07-Sep-2023</td>
-					        <td>Cray X-MP vs iPhone 14</td>
+					        <td>13-Sep-2023</td>
+					        <td>Computer reminders section improved</td>
 					    </tr>
 						<tr>
 							<td>02-Jan-2023</td>
@@ -258,20 +258,24 @@
 					<h3>Who am I?</h3>
 					<ul>
 						<li><a href="https://systev.com" target="_blank">
-								Half-time independent consultant - connected devices</a> <br />
-							<a href="https://www.ackl.io" target="_blank">
-								<img src="images/logo-acklio.png"></a>
+								Independent consultant - connected devices</a> <br />
+							<a href="https://baylibre.com/" targe="_blank">
+							    <img src="images/logo_baylibre_rvb_400-300x104.png.webp" width="160"></a>
 							&nbsp;
 							<a href="https://www.connectedcycle.com" target="_blank">
 								<img src="images/logo-connectedCycle.png"></a>
+							&nbsp;
+							<a href="https://www.ackl.io" target="_blank">
+								<img src="images/logo-acklio.png"></a>
 						</li>
 						<li>Half-time senior software engineer <br />
 							<a href="https://www.orange.com/en" target="_blank">
 								<img src="images/logo-orange.png" style="vertical-align: middle;">
 							</a>
-							&nbsp;-&nbsp;appointed <em>Orange Expert</em>
+							&nbsp;-&nbsp;appointed <em>Orange Expert (embedded software for connected objects)</em>
 						</li>
-						<li>First connected devices project in 1990</li>
+						<li>Software engineer, project leader, team manager, co-founder, etc.</li>
+						<li>First connected objects project in 1990</li>
 					</ul>
 				</section>
 				<section>
