Improve Project Management section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 					</thead>
 					<tbody>
 					    <tr>
+					        <td>01-Nov-2023</td>
+					        <td>Project management section improved</td>
+					    </tr>
+					    <tr>
 					        <td>13-Sep-2023</td>
 					        <td>Computer reminders section improved</td>
 					    </tr>
@@ -74,10 +78,6 @@
 						<tr>
 							<td>13-Nov-2021</td>
 							<td>More about software - Case studies</td>
-						</tr>
-						<tr>
-							<td>05-Mar-2021</td>
-							<td>Added how to navigate, UDP lab</td>
 						</tr>
 						<tr>
 							<td>24-Feb-2021</td>
@@ -120,9 +120,13 @@
 				<ul>
 					<li>Use the right and left arrows (in bottom right corner) to navigate from one topic to another
 					</li>
-					<li>In a topic, use the top and down arrows</li>
+					<li>In a topic, use the top and down arrows
+					<br>
+					<img src="images/navigation.png" height="200">
+					</li>
+                    <li>Overview: press "O" letter - navigate with arrow keys - "ESC" or click on slide to exit</li>
+                    <li>Full screen: press "F" letter - "ESC" to exit</li>
 				</ul>
-				<img src="images/navigation.png" height="350">
 			</section>
 			<section>
 				<section>
@@ -218,10 +222,10 @@
 				<section>
 					<h3><a href="#/project">Project management</a></h3>
 					<ul>
-						<li><a href="#/project-1">Usual industrial project</a></li>
-						<li><a href="#/project-2">Connected objects project</a></li>
-						<li><a href="#/project-3">Problems</a></li>
-						<li><a href="#/project-4">Possible solution: be agile</a></li>
+						<li><a href="#/project-1">How to make any project successful?</a></li>
+						<li><a href="#/project-2">Involved technical domains</a></li>
+						<li><a href="#/project-3">More than playing with technologies</a></li>
+						<li><a href="#/project-4">Agile Software Development</a></li>
 						<li><a href="#/project-5">Adaptation to a connected objects project</a></li>
 						<li><a href="#/project-6">Case studies</a></li>
 					</ul>
@@ -258,7 +262,7 @@
 					<h3>Who am I?</h3>
 					<ul>
 						<li><a href="https://systev.com" target="_blank">
-								Independent consultant - connected devices</a> <br />
+								Independent consultant and freelancer - connected devices</a> <br />
 							<a href="https://baylibre.com/" targe="_blank">
 							    <img src="images/logo_baylibre_rvb_400-300x104.png.webp" width="160"></a>
 							&nbsp;
@@ -267,15 +271,18 @@
 							&nbsp;
 							<a href="https://www.ackl.io" target="_blank">
 								<img src="images/logo-acklio.png"></a>
+							&nbsp;
+							<a href="https://www.ademe.fr/en/frontpage/" target="_blank">
+								<img src="images/logoademe2020_gb_rvb.webp" height="100"></a>						
 						</li>
-						<li>Half-time senior software engineer <br />
-							<a href="https://www.orange.com/en" target="_blank">
-								<img src="images/logo-orange.png" style="vertical-align: middle;">
-							</a>
-							&nbsp;-&nbsp;appointed <em>Orange Expert (embedded software for connected objects)</em>
+						<li>Beforehand: software engineer, project leader, team manager, co-founder, technical expert</li>
+						<li>
+						McDonnell Douglas Informations Systems, Digital Equipement Corporation (DEC), Orange
 						</li>
-						<li>Software engineer, project leader, team manager, co-founder, etc.</li>
-						<li>First connected objects project in 1990</li>
+						<li>
+						Co-founded (and closed down) two companies
+						</li>
+						<li>First connected objects project: in 1990</li>
 					</ul>
 				</section>
 				<section>
@@ -473,7 +480,7 @@
 					</ul>
 				</section>
 				<section id="example-3">
-					<h3>Technical fields</h3>
+					<h3>Technical domains</h3>
 					<ul>
 						<li>Distance between vehicles: sensors, GNSS...</li>
 						<li>Manual alarm triggering: sensor</li>
@@ -2704,39 +2711,139 @@
 					<h2>Project management</h2>
 				</section>
 				<section id="project-1">
-					<h3>Usual industrial project</h3>
-					<img src="images/projectPhases1.png">
+				    <p>How to make any project successful?</p>
+				    <ul>
+				    <li class="fragment">
+    		            <img class="pbfloor" src="images/target.png" width="48">    
+				        The target is precisely defined
+				    </li>
+				    <li class="fragment">
+				        <img class="pbfloor" src="images/process.png" width="48">    
+				        Design and build procedures are known
+				    </li>
+				    <li class="fragment">
+				        <img class="pbfloor" src="images/pallet.png" width="48">    
+				        Required resources are available
+				    </li>
+				    </ul>
+				    <p class="fragment">Note: this is not in contradiction with <em>agility</em> (see farther below)
+				    <div class="pbverysmall"><a href="https://www.flaticon.com/authors/freepik" title="Icons" target="_blank">
+				    Icons created by Freepik - Flaticon</a></div>
 				</section>
 				<section id="project-2">
-					<h3>Connected objects project</h3>
-					<div class="r-stack">
-						<img src="images/projectPhases2a.png">
-						<img class="fragment" src="images/projectPhases2b.png">
-						<img class="fragment" src="images/projectPhases2c.png">
-						<img class="fragment" src="images/projectPhases2d.png">
-					</div>
+				    <p class="pbcenter">Involved technical domains:</p>
+				    <img src="images/domains.png" height="500">
 				</section>
 				<section>
-					<ul>
-						<li>Be sure to understand real needs of users</li>
-						<li>Ensure to be prepared to integrate required technologies</li>
-						<li>Make dedicated tools (hardware and software) for development and tests</li>
+				    <p class="pbcenter">Three different technical domains</p>
+				    <p class="pbcenter">&rArr; Complicated</p>
+				</section>
+				<section>
+				    <p>About communications domain:</p>
+				    <ul>
+				    <li>The main point is not about how to integrate a given communication technology</li>
+				    <li class="fragment">It is about choosing the right communication technology/ies</li>
+				    </ul>
+				</section>
+				<section>
+				    <p>Most often, communications are wireless</p>
+				    <ul>
+				    <li>Communication disruptions will occur</li>
+				    <li>Disruption may be permanent in some locations</li>
+				    </ul>
+				    <p>&rArr; Impact on system functionalities</p>
+				    <p>&rArr; Impact on the system architecture</p>
+				</section>
+				<section>
+				    <p>About computer science domain:</p>
+				    <ul>
+				    <li>It's more than developing a usual application software</li>
+				    <li class="fragment">It's designing and developing a resilient distributed system</li>
+				    <li class="fragment">It's developing embedded software
+				    <li class="fragment">It's developing communication software</li>
+				    </ul>
+				</section>
+				<section>
+				    <p>About software developers:</p>
+				    <ul>
+				    <li>Most are not used to handling unreliable communications</li>
+				    <li class="fragment">Most are specialized in one network technology</li>
+				    <li class="fragment">Most are frontend/backend developers</li>
+				    <li class="fragment">Etc.</li>
+				    </ul>
+				</section>
+				<section>
+				    <p>For a given project:</p>
+				    <ul>
+				    <li>The project team may be not experienced enough with some technologies</li>
+					<li class="fragment">Some components to integrate may be not mature enough</li>
+					<li class="fragment">Some components to integrate may age rapidly</li>
+					<li class="fragment">Some components may be unreliable</li>
+					<li class="fragment">Some components may present undocumented behaviors</li>
+					<li class="fragment">Etc.</li>
 					</ul>
 				</section>
 				<section id="project-3">
-					<h3>Problems</h3>
-					<ul>
-						<li>A connected objects system may transform existing business processes</li>
-						<li>It could be that the customer is not able to fully understand the impact</li>
-						<li>The project team may be not experienced enough with some technologies</li>
-						<li>Some technologies to integrate may be not mature enough</li>
-						<li>Some technologies to integrate may age rapidly</li>
-						<li>etc.</li>
-					</ul>
+				    <p class="pbcenter">A project is more than playing with technologies:</p>
+				    <div class="r-stack">
+				        <img src="images/domains.png" height="500">
+				        <img class="fragment" src="images/domains-2.png" height="500">
+				    </div>
+				</section>
+				<section>
+				    <p>On client side:</p>
+				    <ul>
+				    <li><b>Connected objects may be used in almost every domain</b></li>
+				    <li class="fragment">A client may not fully imagine how connected objects can improve/impact their activity</li>
+				    <li class="fragment">A client may dictate the use of some technical elements</li>
+				    <li class="fragment">A client may not know the limits of a technology</li>
+				    <li class="fragment">The users may fear being monitored</li>
+				    <li class="fragment">Etc.</li>
+				    </ul>
+				</section>
+				<section>
+				    <p>On project side:</p>
+				    <ul>
+				    <li>It takes time to understand all the rules of a given client business</li>
+				    <li class=fragment>It takes time to understand potential impacts of various technologies on a 
+				        given client business</li>
+				    <li class="fragment">Etc.</li>
+				    </ul>
+				</section>
+				<section>
+				    <p>When assessing needs or analyzing requirements:</p>
+				    <ul>
+				    <li class="fragment">Often: client &NotEqual; user</li>
+				    <li class="fragment">Try to understand the real needs of the users</li>
+				    <li class="fragment">How would a given wireless solution impact needs fulfillment?</li>
+				    <li class="fragment">More generally: impacts of technical components?</li>
+				    <li class="fragment">Etc.</li>
+				    </ul>
+				</section>
+				<section>
+				    <p>&rArr; In front of the client:</p> 
+				    <ul>
+				    <li>Someone who can talk needs</li>
+				    <li>Someone who knows which wireless solution(s) can match the needs
+				    <li>Someone who can imagine a first version of the global architecture
+				    <li>Someone who is experienced in project management
+				    </ul>
+				    <p>That's better if this is only one person!
+				</section>
+				<section>
+				    <p>Remember how to make a project successful?</p>
+				    <p class="fragment pbcenter">
+				    <img src="images/target.png" width="128">
+				    <img src="images/process.png" width="128">
+				    <img src="images/pallet.png" width="128">
+				    </p>
+				    <p class="fragment">One good way: <em>be agile.</em>
+				    <div class="pbverysmall"><a href="https://www.flaticon.com/authors/freepik" title="Icons" target="_blank">
+				    Icons created by Freepik - Flaticon</a></div>
 				</section>
 				<section id="project-4">
-					<h3>Possible solution: be agile</h3>
-					<p class="pbcenter">Value:</p>
+					<h4>Agile Software Development</h4>
+					<p>One should value:</p>
 					<ul>
 						<li>Individuals and interactions over processes and tools</li>
 						<li>Working software over comprehensive documentation</li>
@@ -2747,11 +2854,15 @@
 							target="_blank">Agile Manifesto</a></div>
 				</section>
 				<section>
-					<p>This manifesto, created for software development, can provide very good results for other types
+					<p>Created for software development, can provide very good results for other types
 						of projects.</p>
-					<p class="fragment">Stay agile when applying the Agile Manifesto! &#x1F642;</p>
 				</section>
 				<section>
+				    <p>Agile Development is a state of mind, not a methodology.</p>
+				    <p class="fragment">Enforcing a methodology (e.g. Scrum) is NOT agile.</p>
+				</section>
+				<section id="project-5">
+				    <p>One way which works well:</p>
 					<div class="r-stack">
 						<img src="images/agile.png">
 						<img class="fragment" src="images/agile-1.png">
@@ -2768,14 +2879,16 @@
 					</ul>
 				</section>
 				<section>
-					<p>About solid foundations:</p>
+					<p>Getting solid foundations:</p>
 					<ul>
 						<li>Integrate handling of connectivity issues right from the design phase</li>
-						<li>Separate the challenges: separate proofs of concepts</li>
-						<li>Test system elasticity (how it resists the pressure)</li>
-						<li>Break down in layers (see <a href="#/architecture-2" target="_blank">architecture</a>)</li>
-						<li>Ensure stability and robustness of a layer before building upon it</li>
-						<li>Develop automated tests (validation and non regression) in parallel</li>
+						<li class="fragment">Separate the challenges: develop separate proofs of concepts</li>
+						<li class="fragment">Test system elasticity (how it resists the pressure)</li>
+						<li class="fragment">Break down in layers (see <a href="#/architecture-2" target="_blank">architecture</a>)</li>
+						<li class="fragment">Ensure stability and robustness of a layer before building upon it</li>
+						<li class="fragment">Develop dedicated tools: manufacturing tests, message injection, 
+						    communication logger, etc.</li>
+						<li class="fragment">Develop automated tests (validation and non regression) in parallel</li>
 					</ul>
 				</section>
 				<section>
@@ -2783,18 +2896,19 @@
 					<ul>
 						<li>Can be used even when answering a Request for Proposal</li>
 						<li>Good for the client and for the integrator</li>
-						<li>To be agile is far more important than sticking to a predefined plan</li>
+						<li>Allows to better adapt to changes (needs, technology)</li>
 					</ul>
 				</section>
-				<section id="project-5">
-					<h3>For a connected objects project</h3>
+				<section>
+					<p>Additional tips:</p>
 					<ul>
 						<li>Make prototypes and present them to the users (not only to the customer)</li>
-						<li>Test in the field as soon as possible</li>
-						<li>If possible, implement Over The Air (OTA) updates</li>
-						<li>Use equipment that can be upgraded</li>
-						<li>Use equipment with more processing power than strictly required</li>
-						<li>etc.</li>
+						<li class="fragment">Test in the field as soon as possible</li>
+						<li class="fragment">If possible, implement Over The Air (OTA) updates</li>
+						<li class="fragment">Use equipment that can be upgraded</li>
+						<li class="fragment">Use equipment with more processing power than strictly required</li>
+						<li class="fragment">Record information about project progress, for next project</li>
+						<li class="fragment">Etc.</li>
 					</ul>
 				</section>
 				<section id="project-6">
@@ -3138,8 +3252,8 @@
 							help</li>
 						<li>&rArr; Ensure to get a global view (hardware + software)</li>
 					</ul>
-				</section>
-			</section>
+				</section>				
+			</section>			
 			<section id="conclusion">
 				<h2>Conclusion</h2>
 			</section>
