--- a/index.html
+++ b/index.html
@@ -3128,7 +3128,7 @@
 						<li>&rArr; Test elasticity as soon as possible</li>
 						<li>&rArr; Never believe an outsourced design will be flawless, especially when working with a
 							large company</li>
-						<li>&rArr; Always get the broad view (here: software + hadrware</li>
+						<li>&rArr; Always get the broad view (here: software + hardware)</li>
 					</ul>
 				</section>
 				<section>
