Improve device architecture diagram

--- a/connectedDevice.html
+++ b/connectedDevice.html
@@ -315,32 +315,33 @@
                             <div class="r-stack">
                                 <div class="fragment fade-in-then-out">
                                     <ul>
-                                        <li>microcontroller
+                                        <li>Microcontroller
                                             <ul>
-                                                <li>some peripherals (e.g. timers, watchdog, etc.)</li>
-                                                <li>interfaces (serial links, serial buses, GPIO, etc.)</li>
+                                                <li>CPU + memory</li>
+                                                <li>Some peripherals (e.g. timers, watchdog, etc.)</li>
+                                                <li>Interfaces (serial links, serial buses, GPIO, etc.)</li>
                                             </ul>
                                         </li>
-                                        <li>communication (may be hosted by the microcontroller)</li>
+                                        <li>Communication (may be hosted by the microcontroller)</li>
                                     </ul>
                                 </div>
                                 <div class="fragment fade-in-then-out">
                                     <ul>
-                                        <li>optionally:
+                                        <li>Optionally:
                                             <ul>
-                                                <li>additional interfaces</li>
-                                                <li>peripherals (sensors, etc.)</li>
-                                                <li>positioning</li>
-                                                <li>user interface</li>
-                                                <li>power supply management</li>
-                                                <li>data storage</li>
+                                                <li>Additional interfaces</li>
+                                                <li>Peripherals (sensors, etc.)</li>
+                                                <li>Positioning</li>
+                                                <li>User interface</li>
+                                                <li>Power supply management</li>
+                                                <li>Data storage</li>
                                             </ul>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="fragment fade-in_then-out">
                                     <ul>
-                                        <li>not depicted: optional, additional memory, outside of the microcontroller
+                                        <li>Not depicted: optional, additional memory, outside of the microcontroller
                                         </li>
                                     </ul>
                                 </div>
