mangoh no more supported?

--- a/connectedDevice.html
+++ b/connectedDevice.html
@@ -683,6 +683,8 @@
                 </section>
                 <section>
                     <h4>mangOH boards</h4>
+                    <p>Update: do not seem supported anymore. A side-effect of the <a href="https://www.semtech.com/company/press/semtech-corporation-completes-acquisition-of-sierra-wireless"
+                    target="_blank">acquisition of Sierra Wireless by Semtech?</a</p>
                 </section>
                 <section>
                     <div class="row">
