--- a/connectedDevice.html
+++ b/connectedDevice.html
@@ -914,7 +914,7 @@
                 <section>
                     <ul>
                         <li>Synchronous communications: clock and data</li>
-                        <li>Master/slave</li>
+                        <li>Master/slave (or Main/Subnode)</li>
                         <li>4 wires:
                             <ul>
                                 <li>Clock</li>
