Objenious acquired by Netmore Group

--- a/index.html
+++ b/index.html
@@ -1290,11 +1290,14 @@
 						<li>148 operators, in 162 countries</li>
 						<li>In France:
 							<ul>
-								<li>Objenious (Bouygues Telecom)</li>
+								<li>Objenious (Bouygues Telecom) - Acquired by Netmore Group -Nov-2023)</li>
 								<li>Orange</li>
 							</ul>
 						</li>
 					</ul>
+                    <div class="pbverysmall">Source: 
+                        <a href="https://netmoregroup.com/news/netmore-group-to-operate-and-expand-acquired-lorawan-network-in-france/"
+						title="Netmore Group" target="_blank">Netmore Group</a></div>
 				</section>
 				<section>
 					<ul>
