--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
 						<li>148 operators, in 162 countries</li>
 						<li>In France:
 							<ul>
-								<li>Objenious (Bouygues Telecom) - Acquired by Netmore Group -Nov-2023)</li>
+								<li>Objenious (Bouygues Telecom) - Acquired by Netmore Group (Nov-2023)</li>
 								<li>Orange</li>
 							</ul>
 						</li>
