Add Matomo link

--- a/index.html
+++ b/index.html
@@ -289,9 +289,10 @@
 					<h3>More information</h3>
 					<ul>
 						<li><a href="https://fr.systev.com" target="_blank">Systev</a></li>
-						<li><a href="https://twitter.com/pascalbod06" target="_blank">Twitter</a></li>
 						<li><a href="https://www.linkedin.com/in/pascalbodin/" target="_blank">LinkedIn</a></li>
 						<li><a href="https://github.com/PascalBod" target="_blank">GitHub</a></li>
+                        <li><a href="https://mastodon.world/@pascalb06" target="_blank">Matomo</a></li>
+						<li><a href="https://twitter.com/pascalbod06" target="_blank">X</a></li>
 					</ul>
 				</section>
 				<section>
