--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 						<li><a href="https://fr.systev.com" target="_blank">Systev</a></li>
 						<li><a href="https://www.linkedin.com/in/pascalbodin/" target="_blank">LinkedIn</a></li>
 						<li><a href="https://github.com/PascalBod" target="_blank">GitHub</a></li>
-                        <li><a href="https://mastodon.world/@pascalb06" target="_blank">Matomo</a></li>
+                        <li><a href="https://mastodon.world/@pascalb06" target="_blank">Mastodon</a></li>
 						<li><a href="https://twitter.com/pascalbod06" target="_blank">X</a></li>
 					</ul>
 				</section>
